--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,3 +21,19 @@
  div.carousel-caption {
      text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
  }
+
+ .avatar {
+     max-width: 128px;
+     max-height: 128px;
+     border-radius: 50% ;
+ }
+
+ .avatar-medium {
+    max-width: 72px;
+    max-height: 72px;
+ }
+
+ .avatar-mini {
+     max-width: 36px ;
+     max-height: 36px ;
+ }
