--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -50,22 +50,23 @@
             </div>
         </div>
 
-        <div class="col-md-4">
-            <div class="row">
-                <div class="col-4">
-                    <img src="http://placehold.it/64x64" alt="Avatar de joseph">
+        <div class="col">
+            {% set a = ad.author %}
+            <div class="row mb-3 align-item-center">
+                <div class="col-3">
+                    <a href="{{ path('user_show', {'slug' : a.slug}) }}">
+                        <img src="{{ a.picture }}" class="avatar avatar-medium" alt="Avatar de {{ a.fullName }} ">
+                    </a>
                 </div>
                 <div class="col">
-                    <h3> Joseph Dupont</h3>
-                    <span class="badge badge-primary"> 3 annonces </span>
+
+                    <a href=" {{ path('user_show', {'slug' : a.slug}) }}">
+                        <h3>{{ a.fullName }}</h3>
+                    </a>
+                    <span class="badge badge-primary"> {{a.ads | length}} annonces </span>
                 </div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo enim possimus error! Quas omnis impedit
-                fuga tempore sit autem officiis.</p>
-            <p>Officiis quo deleniti architecto doloribus libero. Cum sunt eaque placeat impedit incidunt, accusamus
-                reiciendis perspiciatis velit doloribus, doloremque consectetur facere!</p>
-            <p>Id qui, vero laboriosam odit reiciendis tempora aspernatur, quaerat esse exercitationem sequi eius
-                dignissimos numquam impedit culpa error similique unde.</p>
+            {{ a.description | raw }}
         </div>
     </div>
 </div>
