--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -11,13 +11,34 @@
                 <a class="nav-link" href="{{ path('homepage') }}">Accueil </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="{{ path('ad_index') }}">Annonces</a>
+                <a class="nav-link" href="{{ path('ads_index') }}">Annonces</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a href="#" class="nav-link"> Mon compte!</a>
-            </li>
+            {% if app.user %}
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownlink">
+                        <img src="{{ app.user.picture }}" class="avatar avatar-mini" alt="avatar de {{ app.user.fullName}}">
+                        {{ app.user.fullName }}
+                    </a>
+
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
+                        <a href="{{ path('ads_create')}}" class="dropdown-item">Créer une annonce</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{{ path('account_home')}}" class="dropdown-item">Mon compte</a>
+                        <a href="{{ path('account_profile')}}" class="dropdown-item">Modifier profil</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{{ path('account_logout')}}" class="dropdown-item text-danger">Deconnexion</a>
+                    </div>
+                </li>
+            {% else %}
+                <li class="nav-item">  
+                    <a href="{{ path('account_register') }}" class="nav-link"> Inscription</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{ path('account_logout') }}" class="nav-link"> Login</a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
