--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,5 +35,9 @@
 
  .avatar-mini {
      max-width: 36px ;
-     max-height: 36px ;
+     max-height: 36 px ;
+ }
+
+ .datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
+     color: firebrick !important;
  }
