Mise en place de l'administration

--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -3,13 +3,16 @@
 {% block title %} Modification Password {% endblock %}
 
 {% block body %}
-    <div class="container">
-        <h1 class="text-center">Modification Password</h1>
+    <div class="container clearfix">
+        <h1 class="my-5">Modification Password</h1>
 
         {{form_start(form)}}
         {{form_widget(form)}}
 
-        <button type="submit" class="btn btn-danger">Modifier</button>
+        <button type="submit" class="btn btn-danger float-right">
+        <i class="fas fa-check"></i>
+        Modifier
+        </button>
 
         {{form_end(form)}}
 
