--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,6 +18,13 @@
 
  }
 
+ div.ad-title .btn{
+     margin-top: 2em ;
+     font-size: 1.5em ;
+     line-height: 1.5em ;
+
+ }
+
  div.carousel-caption {
      text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
  }
@@ -35,9 +42,26 @@
 
  .avatar-mini {
      max-width: 36px ;
-     max-height: 36 px ;
+     max-height: 36px ;
+ }
+
+ .avatar-micro {
+     max-width: 24px;
+     max-height: 24px;
  }
 
  .datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
      color: firebrick !important;
+ }
+
+ span.rating i {
+     color : goldenrod ;
+ }
+
+ .alert a {
+     text-decoration: none;
+ }
+
+ .alert a {
+     color: white ;
  }
