--- a/templates/account/profile.html.twig
+++ b/templates/account/profile.html.twig
@@ -4,12 +4,35 @@
 
 {% block body %} 
     <div class="container">
-        <h1 class="text-center"> Votre Profile </h1>
+        <h1 class="my-5"> Votre Profile </h1>
 
         {{ form_start(form)}}
-        {{ form_widget(form)}}
-
-        <button type="submit" class="btn btn-danger ">Modifier</button>
+        <div class="row">
+            <div class="col">
+                <div class="alert alert-light">
+                    <h2 class="alert-heading">Informations générales</h2>
+                    <hr>
+                    {{ form_row(form.firstName) }}
+                    {{ form_row(form.lastName) }}
+                    {{ form_row(form.email) }}
+                    {{ form_row(form.picture) }}
+                </div>
+            </div>
+            <div class="col">
+                
+                <div class="alert alert-light clearfix">
+                    <h2 class="alert-heading"> Détails</h2>
+                    <hr>
+                    {{ form_row(form.introduction) }}
+                    {{ form_row(form.description) }}
+                    <hr>
+                    <button type="submit" class="btn btn-danger float-right clearfix">
+                    <i class="fas fa-check"></i>
+                    Modifier
+                    </button>
+                </div>
+            </div>
+        </div>
         {{ form_end(form)}}
     </div>
 {% endblock %}
