--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -2,8 +2,12 @@
     <div class="col-md-4">
         <div class="card bg-light mb-3">
             <div class="card-header text-center">
-                {{ ad.rooms }} chambres, <strong>{{ ad.price }}&euro; /nuit </strong> <br>
-                <small> Pas encore noté</small>
+                {{ ad.rooms }} chambres, <strong>{{ ad.price | number_format(2, ',', ' ') }}&euro; /nuit </strong> <br>
+                {% if ad.comments|length > 0 %}
+                    {% include 'partials/rating.html.twig' with {'rating' : ad.avgRatings} %}
+                {% else %}
+                    <small> pas encore noté</small>
+                {% endif %}
             </div>
             <a href="{{ url }}">
                 <img src="{{ ad.coverImage }}" alt="Image de l'appartement" style="height: 200px; width : 100%; display: block">
@@ -13,7 +17,7 @@
                 <h4 class="card-title"> {{ ad.title }} </h4>
             </a>
             <p class="card-text"> {{ ad.introduction }}</p>
-            <a href="{{ url }}" class="btn btn-secondary"> En savoir plus ! </a>
+            <a href="{{ url }}" class="btn btn-primary float-right"> En savoir plus ! </a>
             {% if app.user and app.user == ad.author  %}
             <a href="{{ path('ads_edit', {'slug' : ad.slug}) }}" class="btn btn-secondary"> Modifier</a>
             <a href="{{ path('ads_delete', {'slug' : ad.slug}) }}" onclick="return confirm(`Êtes vous sur de vouloir supprimer l'annonce : {{ ad.title }} `)" class="btn btn-danger"> Supprimer</a>
