--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,10 +1,10 @@
-{% extends 'base.html.twig' %}
+ {% extends 'base.html.twig' %}
 
 {% block title %} Page de {{ user.fullName }}{% endblock %}
 
 {% block body %}
     <div class="container "> 
-        <div class="row align-items-center">
+        <div class="row align-items-center mb-5">
             <div class="col-3 text-center">
                 <img src="{{user.picture}}" class="avatar mb-3" alt=" Avatar de {{user.fullName}}">
                 <br>
