--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -18,7 +18,7 @@
                 </tr>
             </thead>
             <tbody>
-            {% for booking in bookings %}
+            {% for booking in pagination.data %}
                 <tr>
                     <td>{{ booking.id }}</td>
                     <td>{{ booking.startDate | date('d/m/Y H:i') }}</td>
@@ -41,5 +41,6 @@
             {% endfor %}
             </tbody>
         </table>  
+        {{ pagination.display }}
     </div>  
 {% endblock %}
