--- a/templates/account/registration.html.twig
+++ b/templates/account/registration.html.twig
@@ -1,47 +1,51 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Inscription {% endblock %}
+{% block title %}
+	Inscription
+{% endblock %}
 
 {% block body %}
 
-    <div class="container">
+	<div class="container">
 
-        <h1 class="my-5">Inscription</h1>
-        
-        {{form_start(form)}}
-        <div class="row">
-            <div class="col">
-                <div class="alert alert-light">
-                    <h2 class="alert-heading">Informations générales</h2>
-                    <hr>
-                    {{ form_row(form.firstName) }}
-                    {{ form_row(form.lastName) }}
-                    {{ form_row(form.email) }}
-                    {{ form_row(form.picture) }}
-                </div>
+		<h1 class="my-5">Inscription</h1>
 
-                <div class="alert alert-light">
-                    <h2 class="alert-heading"> Mot de passe</h2>
-                    <hr>
-                    {{ form_row(form.hash) }}
-                    {{ form_row(form.passwordConfirm) }}
-                </div>
-            </div>
-            <div class="col">
+		{{form_start(form)}}
+		<div class="row">
+			<div class="col">
+				<div class="alert alert-light">
+					<h2 class="alert-heading">Informations générales</h2>
+					<hr>
+					{{ form_row(form.firstName) }}
+					{{ form_row(form.lastName) }}
+					{{ form_row(form.email) }}
+					{{ form_row(form.avatarFile) }}
+				</div>
 
-                <div class="alert alert-light clearfix">
-                    <h2 class="alert-heading"> Détails</h2>
-                    <hr>
-                    {{ form_row(form.introduction) }}
-                    {{ form_row(form.description) }}
-                    <hr>
-                    <button type="submit" class="btn btn-success float-right clearfix">
-                    <i class="fas fa-check"></i>
-                    Confirmer l'inscription
-                    </button>
-                </div>
-            </div>
-        </div>
-        {{form_end(form)}}
-    </div>
+				<div class="alert alert-light">
+					<h2 class="alert-heading">
+						Mot de passe</h2>
+					<hr>
+					{{ form_row(form.hash) }}
+					{{ form_row(form.passwordConfirm) }}
+				</div>
+			</div>
+			<div class="col">
+
+				<div class="alert alert-light clearfix">
+					<h2 class="alert-heading">
+						Détails</h2>
+					<hr>
+					{{ form_row(form.introduction) }}
+					{{ form_row(form.description) }}
+					<hr>
+					<button type="submit" class="btn btn-success float-right clearfix">
+						<i class="fas fa-check"></i>
+						Confirmer l'inscription
+					</button>
+				</div>
+			</div>
+		</div>
+		{{form_end(form)}}
+	</div>
 {% endblock %}
