--- a/templates/admin/dashboard/index.html.twig
+++ b/templates/admin/dashboard/index.html.twig
@@ -86,7 +86,7 @@
 								<tr>
 									<td>{{ad.title}}</td>
 									<td>
-										<img src="{{ad.picture}}" alt="" class="avatar avatar-micro mr-2">
+										<img src="{{ad.avatarFile}}" alt="" class="avatar avatar-micro mr-2">
 										{{ad.firstName}}
 										{{ad.lastName}}
 									</td>
@@ -99,37 +99,7 @@
 						</tbody>
 					</table>
 				</div>
-			</div>
-			<div class="col">
-				<div class="alert alert-danger">
-					<h2 class="alert-heading my-3">
-						<i class="fas fa-arrow-down mx-2"></i>Les annonces populaires</h2>
-					<table class="table table-hover text-white">
-						<thead>
-							<tr>
-								<th>Annonce</th>
-								<th>Propriétaire</th>
-								<th>Moyenne</th>
-							</tr>
-						</thead>
-						<tbody>
-							{% for ad in worstAds %}
-								<tr>
-									<td>{{ad.title}}</td>
-									<td>
-										<img src="{{ad.picture}}" alt="" class="avatar avatar-micro mr-2">
-										{{ad.firstName}}
-										{{ad.lastName}}
-									</td>
-									<td>
-										<span class="badge badge-dark">
-											{{ad.note | number_format(1, ",", " ")}}</span>
-									</td>
-								</tr>
-							{% endfor %}
-						</tbody>
-					</table>
-				</div>
+				<div class="col"></div>
 			</div>
 		</div>
 	</div>
