--- a/templates/booking/show.html.twig
+++ b/templates/booking/show.html.twig
@@ -1,105 +1,129 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Reservation de {{ booking.booker.fullName}} {% endblock %}
+{% block title %}
+	Reservation de
+	{{ booking.booker.fullName}}
+{% endblock %}
 
 {% block body %}
 
-{% set ad = booking.ad %}
-{% set author = ad.author %}
-    <div class="container">
-        <h1 class="text-center my-5"> Votre réservation (n°{{ booking.id }})</h1>
+	{% set ad = booking.ad %}
+	{% set author = ad.author %}
+	<div class="container">
+		<h1 class="text-center my-5">
+			Votre réservation (n°{{ booking.id }})</h1>
 
-        {% if app.request.query.get('success') %}
-            <div class="alert alert-success">
-                <h1 class="alert-heading text-center"> Félicitation !</h1>
+		{% if app.request.query.get('success') %}
+			<div class="alert alert-success">
+				<h1 class="alert-heading text-center">
+					Félicitation !</h1>
 
-                <p>
-                
-                    Votre réservation auprès de 
-                    <strong>
-                        <a href="{{ path("user_show", {'slug' : author.slug}) }}"> {{ author.fullName }}</a>
-                    </strong>
-                    pour l'annonce 
-                    <strong>
-                        <a href="{{ path('ads_show', {'slug' : ad.slug}) }}"> {{ ad.title }}</a>
-                    </strong>
-                    a bien été prise en compte !
-                </p>
-            </div>
-        {% endif %}
+				<p>
 
-        <div class="row">  
-            <div class="col">
-                <div class="alert alert-light">
-                    <h2>Détails</h2>
-                    <dl class="row">
-                          <dt class="col-md-4"> Numéro</dt>
-                          <dd class="col-md-8"> {{ booking.id }}</dd>
-                          <dt class="col-md-4"> Date d'arrivée</dt>
-                          <dd class="col-md-8"> {{ booking.startDate | date('d/m/Y') }}</dd>
-                          <dt class="col-md-4">Date de départ</dt>
-                          <dd class="col-md-8"> {{ booking.endDate | date('d/m/Y') }}</dd>
-                          <dt class="col-md-4"> Nombre de nuits</dt>
-                          <dd class="col-md-8">{{ booking.duration }}</dd>
-                          <dt class="col-md-4">Montant Total</dt>
-                          <dd class="col-md-8"> {{ booking.amount | number_format(2, ',', ' ') }} &euro; </dd>   
-                          <dt class="col-md-4">Commentaire</dt>
-                          <dd class="col-md-8">{{ booking.comment | default('Aucun commentaire')}}</dd>
-                    </dl>
+					Votre réservation auprès de
+					<strong>
+						<a href="{{ path("user_show", {'slug' : author.slug}) }}">
+							{{ author.fullName }}</a>
+					</strong>
+					pour l'annonce
+					<strong>
+						<a href="{{ path('ads_show', {'slug' : ad.slug}) }}">
+							{{ ad.title }}</a>
+					</strong>
+					a bien été prise en compte !
+				</p>
+			</div>
+		{% endif %}
 
-                    <hr>
+		<div class="row">
+			<div class="col">
+				<div class="alert alert-light">
+					<h2>Détails</h2>
+					<dl class="row">
+						<dt class="col-md-4">
+							Numéro</dt>
+						<dd class="col-md-8">
+							{{ booking.id }}</dd>
+						<dt class="col-md-4">
+							Date d'arrivée</dt>
+						<dd class="col-md-8">
+							{{ booking.startDate | date('d/m/Y') }}</dd>
+						<dt class="col-md-4">Date de départ</dt>
+						<dd class="col-md-8">
+							{{ booking.endDate | date('d/m/Y') }}</dd>
+						<dt class="col-md-4">
+							Nombre de nuits</dt>
+						<dd class="col-md-8">{{ booking.duration }}</dd>
+						<dt class="col-md-4">Montant Total</dt>
+						<dd class="col-md-8">
+							{{ booking.amount | number_format(2, ',', ' ') }}
+							&euro;
+						</dd>
+						<dt class="col-md-4">Commentaire</dt>
+						<dd class="col-md-8">{{ booking.comment | default('Aucun commentaire')}}</dd>
+					</dl>
 
-                    <h2 class="alert-heading">Votre hôte</h2>
+					<hr>
 
-                    <div class="row mb-3  ">
-                        <div class="col-3">
-                            <img src="{{ author.picture}}" class="avatar avatar-medium" alt=" avatar de {{ author.fullName }} ">
-                        </div>
-                        <div class="col">
-                            <h4>
-                                <a href="{{ path('user_show', {'slug' : author.slug}) }}">{{ author.fullName }}</a>
-                            </h4>                          
-                                <span class="badge badge-primary">{{ author.ads | length }} annonces</span>
-                        </div>
-                    </div>
-                    {{ author.description | raw}}
-                     <a href="{{ path('user_show', {'slug' : author.slug}) }}" class="btn btn-primary"> Plus d'info sur {{ author.firstName }}</a>
-                </div>
-                 <div class="alert-alert-light" id="comment">
-                    <h2 class="alert-heading">Votre avis compte</h2>
-                    {% if date() > date((booking.endDate)) %}
-                        {% set comment = booking.ad.commentFromAuthor(app.user) %}
-                        {% if comment is not null %}
-                            <blockquote>
-                                {{ comment.content }}
-                            </blockquote>
-                            <strong>note :</strong> {% include 'partials/rating.html.twig' with {'rating' : comment.rating } %}
-                        {% else %}
-                            {{ form_start(form) }}
-                            {{ form_widget(form) }}
-                            <button type="submit" class="btn btn-primary">Commenter</button>
-                            {{ form_end(form) }}
-                        {% endif %}
-                    {% else %}
-                        <p>Vous ne pourrez pas noter cette annonce tant que votre voyage ne sera pas complet !</p>
-                    {% endif %}
-                 </div>
-            </div>
-            <div class="col">
-                <div class="alert alert-light">
-                    <h2 class="alert-heading">Votre hébergement</h2>
+					<h2 class="alert-heading">Votre hôte</h2>
 
-                    <h4>
-                        <a href="{{ path('ads_show', {'slug' : ad.slug }) }}"> {{ ad.title }} </a>
-                    </h4>
+					<div class="row mb-3  ">
+						<div class="col-3">
+							<img src="{{ author.avatarFile}}" class="avatar avatar-medium" alt=" avatar de {{ author.fullName }} ">
+						</div>
+						<div class="col">
+							<h4>
+								<a href="{{ path('user_show', {'slug' : author.slug}) }}">{{ author.fullName }}</a>
+							</h4>
+							<span class="badge badge-primary">{{ author.ads | length }}
+								annonces</span>
+						</div>
+					</div>
+					{{ author.description | raw}}
+					<a href="{{ path('user_show', {'slug' : author.slug}) }}" class="btn btn-primary">
+						Plus d'info sur
+						{{ author.firstName }}</a>
+				</div>
+				<div class="alert-alert-light" id="comment">
+					<h2 class="alert-heading">Votre avis compte</h2>
+					{% if date() > date((booking.endDate)) %}
+						{% set comment = booking.ad.commentFromAuthor(app.user) %}
+						{% if comment is not null %}
+							<blockquote>
+								{{ comment.content }}
+							</blockquote>
+							<strong>note :</strong>
+							{% include 'partials/rating.html.twig' with {'rating' : comment.rating } %}
+						{% else %}
+							{{ form_start(form) }}
+							{{ form_widget(form) }}
+							<button type="submit" class="btn btn-primary">Commenter</button>
+							{{ form_end(form) }}
+						{% endif %}
+					{% else %}
+						<p>Vous ne pourrez pas noter cette annonce tant que votre voyage ne sera pas complet !</p>
+					{% endif %}
+				</div>
+			</div>
+			<div class="col">
+				<div class="alert alert-light">
+					<h2 class="alert-heading">Votre hébergement</h2>
 
-                    <img src="{{ ad.coverImage }}" alt="Image de {{ ad.title }}" class="img-fluid">
+					<h4>
+						<a href="{{ path('ads_show', {'slug' : ad.slug }) }}">
+							{{ ad.title }}
+						</a>
+					</h4>
 
-                    {{ ad.content | raw }}
+					<img src="{{ ad.coverImage }}" alt="Image de {{ ad.title }}" class="img-fluid">
 
-                    <a href="{{ path('ads_show', {'slug' : ad.slug}) }}" class="btn btn-primary"> Plus d'info sur {{ ad.title }}</a>
-                </div>
-            </div>
-        </div>
-    </div>
+					{{ ad.content | raw }}
+
+					<a href="{{ path('ads_show', {'slug' : ad.slug}) }}" class="btn btn-primary">
+						Plus d'info sur
+						{{ ad.title }}</a>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
