--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,45 +1,54 @@
- {% extends 'base.html.twig' %}
+{% extends 'base.html.twig' %}
 
-{% block title %} Page de {{ user.fullName }}{% endblock %}
+{% block title %}
+	Page de
+	{{ user.fullName }}
+{% endblock %}
 
 {% block body %}
-    <div class="container "> 
-        <div class="row align-items-center mb-5">
-            <div class="col-3 text-center">
-                <img src="{{user.picture}}" class="avatar mb-3" alt=" Avatar de {{user.fullName}}">
-                <br>
-                <span class="badge badge-primary">{{ user.ads | length }} annonces</span>
-            </div>
-            <div class="col-9">
-                <h1> {{ user.fullName }}</h1>
-                
-                {% if user is same as app.user %}
-                    <div class="mt3">
-                        <a href="{{ path('account_profile') }}" class="btn btn-primary mr-2 mb-2">Modifier mes informations</a>
-                        <a href="{{ path('account_password') }}" class="btn btn-primary mr-2 mb-2">Modifier mon mot de passe</a>
-                    </div>
+	<div class="container ">
+		<div class="row align-items-center mb-5">
+			<div class="col-3 text-center">
+				{% if user.avatarName %}
+					<img src="{{vich_uploader_asset(user)}}" class="avatar mb-3" alt=" Avatar de {{user.fullName}}">
+				{% endif %}
+				<br>
+				<span class="badge badge-primary">{{ user.ads | length }}
+					annonces</span>
+			</div>
+			<div class="col-9">
+				<h1>
+					{{ user.fullName }}</h1>
 
-                {% endif %}
-            </div>
-        </div>
-        {{ user.description | raw}}
+				{% if user is same as app.user %}
+					<div class="mt3">
+						<a href="{{ path('account_profile') }}" class="btn btn-primary mr-2 mb-2">Modifier mes informations</a>
+						<a href="{{ path('account_password') }}" class="btn btn-primary mr-2 mb-2">Modifier mon mot de passe</a>
+					</div>
 
-        <hr>
+				{% endif %}
+			</div>
+		</div>
+		{{ user.description | raw}}
 
-        <h2>Les annonces de {{ user.fullName }}</h2>
+		<hr>
 
-        {% if user.ads | length > 0 %}
+		<h2>Les annonces de
+			{{ user.fullName }}</h2>
 
-        <div class="row">
-            {% for ad in user.ads %}
-            {% include 'ad/_ad.html.twig' %}
-            {% endfor %}     
+		{% if user.ads | length > 0 %}
 
-        </div>
-        {% else %}
-        <div class="alert alert-warning">
-            <strong>{{ user.fullName }}</strong> n'a pas encore d'annonce.
-        </div>
-        {% endif %}
-    </div>
+			<div class="row">
+				{% for ad in user.ads %}
+					{% include 'ad/_ad.html.twig' %}
+				{% endfor %}
+
+			</div>
+		{% else %}
+			<div class="alert alert-warning">
+				<strong>{{ user.fullName }}</strong>
+				n'a pas encore d'annonce.
+			</div>
+		{% endif %}
+	</div>
 {% endblock %}
