--- a/templates/admin/account/login.html.twig
+++ b/templates/admin/account/login.html.twig
@@ -1,64 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion à l'administration</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Connexion à l'administration</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous"/>
 
-    <style>
-        body {
-            display:flex;
-            justify-content: center;
-            height: 100vh;
-        }
+		<style>
+			body {
+				display: flex;
+				justify-content: center;
+				height: 100vh;
+			}
 
-        .card {
-            margin-top : 10%
-        }
+			.card {
+				margin-top: 10%
+			}
+		</style>
+	</head>
+	<body>
+		<div class="col-md-4">
+			<div class="card bg-light">
+				<div class="card-header">
+					<h4 class="card-title">
+						<i class="fas fa-lock"></i>
+						Connexion à l'administration
+					</h4>
+				</div>
+				<div class="card-body">
+					{% if hasError %}
+						<div class="alert alert-warning">
+							<p>Les informations fournies sont incorrect !</p>
+						</div>
+					{% endif %}
+					<form method="post">
+						<div class="form-group">
+							<label for="_username">Email</label>
+							<input type="text" class="form-control" placeholder="adresse email..." name="_username" value="{{ username }}">
+						</div>
 
-    </style>
-</head>
-<body>
-    <div class="col-md-4">
-        <div class="card bg-light">
-            <div class="card-header">
-                <h4 class="card-title">
-                <i class="fas fa-lock"></i>
-                Connexion à l'administration
-                </h4>
-            </div>
-            <div class="card-body">
-            {% if hasError %}
-                <div class="alert alert-warning">
-                    <p>Les informations fournies sont incorrect !</p>
-                </div>
-            {% endif %}
-                <form method="post">
-                    <div class="form-group">
-                        <label for="_username">Email</label>
-                        <input type="text" class="form-control" placeholder="adresse email..." name="_username" value="{{ username }}">
-                    </div>
+						<div class="form-group">
+							<label for="_password">Mot de passe</label>
+							<input type="password" class="form-control" placeholder="password..." name="_password">
+						</div>
 
-                    <div class="form-group">
-                        <label for="_password">Motdepasse</label>
-                        <input type="password" class="form-control" placeholder="password..." name="_password">
-                    </div>
-
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary">
-                            <i class="fas fa-lock-open"></i>
-                            Connexion
-                        </button>
-                        <a href="{{ path('homepage') }}" class="btn btn-link">
-                            <i class="fas fa-arrow-circle-left"></i>
-                            Retour vers le site
-                        </a>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</body>
+						<div class="form-group">
+							<button type="submit" class="btn btn-primary">
+								<i class="fas fa-lock-open"></i>
+								Connexion
+							</button>
+							<a href="{{ path('homepage') }}" class="btn btn-link">
+								<i class="fas fa-arrow-circle-left"></i>
+								Retour vers le site
+							</a>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
