--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <title>SymBNB-{% block title %}{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/app.css">
-    {% block stylesheets %}{% endblock %}
-</head>
-<body>
-    {% include 'admin/partials/header.html.twig' %}
+	<head>
+		<meta charset="UTF-8">
+		<title>SymBNB-
+			{% block title %}{% endblock %}
+		</title>
+		<meta name="viewport" content="width=device-width, user-scalable=no">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous"/>
+		<link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css"/>
+		{{encore_entry_link_tags('app')}}
+		{% block stylesheets %}{% endblock %}
+	</head>
+	<body>
+		{% include 'admin/partials/header.html.twig' %}
 
-    {% block body %}{% endblock %}
+		{% block body %}{% endblock %}
 
-    {% include 'admin/partials/footer.html.twig' %}
+		{% include 'admin/partials/footer.html.twig' %}
 
-    <script  src="/js/jquery.min.js"></script>
-    <script  src="/js/popper.min.js"></script>
-    <script  src="/js/bootstrap.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.6.0/umd/popper.min.js"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-    {% block javascripts %}{% endblock %} 
-</body>
+		{% block javascripts %}{% endblock %}
+	</body>
 </html>
