--- a/templates/admin/dashboard/index.html.twig
+++ b/templates/admin/dashboard/index.html.twig
@@ -86,7 +86,9 @@
 								<tr>
 									<td>{{ad.title}}</td>
 									<td>
-										<img src="{{ad.avatarFile}}" alt="" class="avatar avatar-micro mr-2">
+										{% if ad.avatarName %}
+											<img src="/public/images/avatars/{{ad.avatarName}}" alt="" class="avatar avatar-micro mr-2">
+										{% endif %}
 										{{ad.firstName}}
 										{{ad.lastName}}
 									</td>
@@ -99,8 +101,40 @@
 						</tbody>
 					</table>
 				</div>
-				<div class="col"></div>
+			</div>
+			<div class="col">
+				<div class="alert alert-danger">
+					<h2 class="alert-heading my-3">
+						<i class="fas fa-arrow-down mx-2"></i>Les pires annonces</h2>
+					<table class="table table-hover text-white">
+						<thead>
+							<tr>
+								<th>Annonce</th>
+								<th>Propriétaire</th>
+								<th>Moyenne</th>
+							</tr>
+						</thead>
+						<tbody>
+							{% for ad in worstAds %}
+								<tr>
+									<td>{{ad.title}}</td>
+									<td>
+										{% if ad.avatarName %}
+											<img src="/public/images/avatars/{{ad.avatarName}}" alt="" class="avatar avatar-micro mr-2">
+										{% endif %}
+										{{ad.firstName}}
+										{{ad.lastName}}
+									</td>
+									<td>
+										<span class="badge badge-dark">
+											{{ad.note | number_format(1, ",", " ")}}</span>
+									</td>
+								</tr>
+							{% endfor %}
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
 	</div>
-{% endblock %}
+</div>{% endblock %}
