--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -47,7 +47,9 @@
 			{% if app.user %}
 				<li class="nav-item dropdown">
 					<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownlink">
-						<img src="{{ app.user.avatarFile }}" class="avatar avatar-mini" alt="avatar de {{ app.user.fullName}}">
+						{% if app.user.avatarName %}
+							<img src="{{vich_uploader_asset(app.user)}}" class="avatar avatar-micro" alt="avatar de {{ app.user.fullName}}">
+						{% endif %}
 						{{ app.user.fullName }}
 					</a>
 
