--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -1,27 +1,43 @@
 {% set url = path('ads_show', {'slug' : ad.slug }) %}
-    <div class="col-md-4">
-        <div class="card bg-light mb-3">
-            <div class="card-header text-center">
-                {{ ad.rooms }} chambres, <strong>{{ ad.price | number_format(2, ',', ' ') }}&euro; /nuit </strong> <br>
-                {% if ad.comments|length > 0 %}
-                    {% include 'partials/rating.html.twig' with {'rating' : ad.avgRatings} %}
-                {% else %}
-                    <small> pas encore noté</small>
-                {% endif %}
-            </div>
-            <a href="{{ url }}">
-                <img src="{{ ad.coverImage }}" alt="Image de l'appartement" style="height: 200px; width : 100%; display: block">
-            </a>
-            <div class="card-body">
-            <a href="{{ url }}">
-                <h4 class="card-title"> {{ ad.title }} </h4>
-            </a>
-            <p class="card-text"> {{ ad.introduction }}</p>
-            <a href="{{ url }}" class="btn btn-primary float-right"> En savoir plus ! </a>
-            {% if app.user and app.user == ad.author  %}
-            <a href="{{ path('ads_edit', {'slug' : ad.slug}) }}" class="btn btn-secondary"> Modifier</a>
-            <a href="{{ path('ads_delete', {'slug' : ad.slug}) }}" onclick="return confirm(`Êtes vous sur de vouloir supprimer l'annonce : {{ ad.title }} `)" class="btn btn-danger"> Supprimer</a>
-            {% endif %}
-            </div>
-        </div>
-    </div>
+<div class="col-md-4">
+	<div class="card bg-light mb-3">
+		<div class="card-header text-center">
+			{{ ad.rooms }}
+			chambres,
+			<strong>{{ ad.price | number_format(2, ',', ' ') }}&euro; /nuit
+			</strong>
+			<br>
+			{% if ad.comments|length > 0 %}
+				{% include 'partials/rating.html.twig' with {'rating' : ad.avgRatings} %}
+			{% else %}
+				<small>
+					pas encore noté</small>
+			{% endif %}
+		</div>
+		{% if ad.coverImageName %}
+			<a href="{{ url }}">
+				<img src="{{vich_uploader_asset(ad)}}" alt="Image de l'appartement" style="height: 200px; width : 100%; display: block">
+			</a>
+		{% else %}
+			<img class="" src="http://glace-sorbet.fr/wp-content/uploads/2010/10/pas-de-photo.jpg" alt="no-photo" style="height: 200px; display: block">
+		{% endif %}
+		<div class="card-body">
+			<a href="{{ url }}">
+				<h4 class="card-title">
+					{{ ad.title }}
+				</h4>
+			</a>
+			<p class="card-text">
+				{{ ad.introduction }}</p>
+			<a href="{{ url }}" class="btn btn-primary float-right">
+				En savoir plus !
+			</a>
+			{% if app.user and app.user == ad.author  %}
+				<a href="{{ path('ads_edit', {'slug' : ad.slug}) }}" class="btn btn-secondary btn-sm">
+					Modifier</a>
+				<a href="{{ path('ads_delete', {'slug' : ad.slug}) }}" onclick="return confirm(`Êtes vous sur de vouloir supprimer l'annonce : {{ ad.title }} `)" class="btn btn-danger btn-sm">
+					Supprimer</a>
+			{% endif %}
+		</div>
+	</div>
+</div>
