--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -1,54 +1,59 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Création d'une annonce {% endblock %}
+{% block title %}
+	Création d'une annonce
+{% endblock %}
 
 {% form_theme form 'ad/_collection.html.twig' %}
 
 {% block body %}
-<div class="container">
-    <h1 class="my-5">Créer une annonce </h1>
+	<div class="container">
+		<h1 class="my-5">Créer une annonce
+		</h1>
 
-    {{form_start(form) }}
-    <div class="row">
-        <div class="col">
-            <div class="alert alert-light">
-                <h2>Informations générales</h2>
-                <hr>
-                {{ form_row(form.title) }}
-                {{ form_row(form.slug) }}
-                {{ form_row(form.price) }}
-                {{ form_row(form.rooms) }}
-            </div>
-            <div class="alert alert-light">
-                <h2>Détails de l'annonce</h2>
-                <hr>
-                {{ form_row(form.introduction) }}
-                {{ form_row(form.content) }}
-            </div>
-        </div>
-        <div class="col">
-            <div class="alert alert-light">
-                <h2>Images de l'annonce</h2>
-                <hr>
-                {{ form_row(form.coverImage) }}
-                {{ form_row(form.images) }}
-            </div>
-        </div>
-    </div>
-    <div class="alert alert-success clearfix">
-        <h2 class="alert-heading">Sauvegarder L'annonce</h2>
-        <p>Vous êtes sur le point de créer votre annonce. <strong>Féliciation !</strong></p>
-        <button class="btn btn-primary text-center">
-            <i class="fas fa-check"></i>
-            Créer l'annonce
-        </button>
-    </div>
-    {{form_end(form) }}
-    
-</div>
+		{{form_start(form) }}
+		<div class="row">
+			<div class="col">
+				<div class="alert alert-light">
+					<h2>Informations générales</h2>
+					<hr>
+					{{ form_row(form.title) }}
+					{{ form_row(form.slug) }}
+					{{ form_row(form.price) }}
+					{{ form_row(form.rooms) }}
+				</div>
+				<div class="alert alert-light">
+					<h2>Détails de l'annonce</h2>
+					<hr>
+					{{ form_row(form.introduction) }}
+					{{ form_row(form.content) }}
+				</div>
+			</div>
+			<div class="col">
+				<div class="alert alert-light">
+					<h2>Images de l'annonce</h2>
+					<hr>
+					{{ form_row(form.coverImageFile) }}
+					{{ form_row(form.images) }}
+				</div>
+			</div>
+		</div>
+		<div class="alert alert-success clearfix">
+			<h2 class="alert-heading">Sauvegarder L'annonce</h2>
+			<p>Vous êtes sur le point de créer votre annonce.
+				<strong>Féliciation !</strong>
+			</p>
+			<button class="btn btn-primary text-center">
+				<i class="fas fa-check"></i>
+				Créer l'annonce
+			</button>
+		</div>
+		{{form_end(form) }}
+
+	</div>
 {% endblock %}
 
 
 {% block javascripts %}
-<script src="/js/ad.js"></script>
+	{{ encore_entry_script_tags('app') }}
 {% endblock %}
